fix: spacings absolute

--- a/css/detail.css
+++ b/css/detail.css
@@ -18,6 +18,9 @@
 .detail-img-container {
     height: 300px;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .detail-img {
@@ -30,7 +33,8 @@
     position: absolute;
     top: 0;
     width: 100%;
-    padding: var(--spacing-8) 20px;
+    max-width: 320px;
+    padding: var(--spacing-8) 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
